# BTD5-Rewritten

./: .gitignore  Bloons TD 5 Custom.csproj  Bloons TD 5 Custom.sln  Bloons TD 5 Rewritten.csproj  Bloons TD 5 Rewritten.sln  MainMenuScreen.tscn  README.md  export_presets.cfg  project.godot
Godot/NewFramework/: Circle2D.tscn  CompoundSprite.tscn  DebugOverlay.tscn  Gam12B.tmp  GameRoot.tscn  ObjectManager.tscn  PathUtil.tscn  Sprite.tscn  TestRoot.tscn
Godot/Screens/: DGSplashScreen.cs  DGSplashScreen.gd  DGSplashScreen.tscn  GameHudScreen.tscn  GameScreen.cs  GameScreen.tscn  GameSelectionScreen.cs  GameSelectionScreen.gd  GameSelectionScreen.tscn  GameplayScreen.cs  GameplayScreen.tscn  InGameBorders.tscn  InGamePauseScreen.cs  InGamePauseScreen.tscn  InGameTowerSelectionScreen.cs  InGameTowerSelectionScreen.tscn  LoadingScreen.cs  LoadingScreen.tscn  MainMenuScreen.cs  MainMenuScreen.gd  MainMenuScreen.tscn  MapSelectScreen.cs  MapSelectScreen.tscn  PopupScreenBase.cs  PopupScreenBase.gd  PopupScreenBase.tscn
Godot/Scripts/: MapMask.cs  MapMaskNode.cs  MapPath.cs  ScreenManager.cs  asset_importer_config.gd  compound_sprite.gd  map_populator.gd  (+5 more)
NewFramework/: DebugOverlay.tscn  GameRoot.tscn  Sprite.tscn
godot/: Bloons TD 5 Rewritten.csproj  Bloons TD 5 Rewritten.csproj.old.1  Bloons TD 5 Rewritten.sln  export_presets.cfg  icon.svg.import  project.godot
native/: CMakeLists.txt  CompoundSprite.cpp  CompoundSprite.h  actor.cpp  actor.h  actor_components.cpp  actor_components.h  compound_sprite.cpp  compound_sprite.h  constants.h  library.h  register_types.cpp  register_types.h  timeline_interpolator.cpp  timeline_interpolator.h
(+416 files in other folders)
